# raise

./: .claude.json  .env.example  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO-STRATEGY.md  LICENSE  NOTICE  README.md  SECURITY.md  bug-396-retro.md  bug-397-retro.md  bug-397-scope.md  conftest.py  docker-compose.yml  llms.txt  mkdocs.yml  pyproject.toml  scope.md  sonar-project.properties
.agent/rules/: GEMINI.md  raise.md
.agent/workflows/: rai-debug.md  rai-discover-document.md  rai-discover-scan.md  rai-discover-start.md  rai-discover-validate.md  rai-docs-update.md  rai-epic-close.md  rai-epic-design.md  rai-epic-plan.md  rai-epic-start.md  rai-problem-shape.md  rai-project-create.md  rai-project-onboard.md  rai-research.md  rai-session-close.md  rai-session-start.md  rai-story-close.md  rai-story-design.md  rai-story-implement.md  rai-story-plan.md  rai-story-review.md  rai-story-start.md  rai-welcome.md
.claude/: RAI-naming.md  RAI.md  settings.json  settings.local.json
.claude/rai/: calibration.md  identity.md  memory.md  session-index.md
.claude/rai.archive/: calibration.md  identity.md  memory.md  session-index.md
.claude/rules/: 100-kata-structure-v2.1.md  110-raise-command-creation.md  110-raise-kit-command-creation.md
.claude/scripts/: pre-compact-journal.sh  pre-compact-reminder.sh  session-init.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci-package.yml  ci-rai-agent.yml  ci-raise-cli.yml  ci-raise-core.yml  ci-raise-pro.yml  ci-raise-server.yml  ci.yml  codeql.yml  deploy-docs.yml  deploy-site.yml  release.yml
.private/: README.md
.private/decisions/: adr-002-git-distribution.md  adr-008-observable-workflow.md  adr-012-speckit-command-consolidation.md
.private/planning/: roadmap-tech-legacy.md
.private/reports/: raise-ontology-validation-report.md
.private/research/: raise-research-backlog-v1.md
.private/tools/: PROMPT-CONTINUACION-P2.md  prompt-procesar-transcript.md
.rai/: manifest.yaml
.rai/identity/: core.md  perspective.md
.rai/memory/: calibration.jsonl  patterns.jsonl
.rai/relationships/: humans.jsonl
.rai/telemetry/: signals.jsonl
.raise/: .gitignore  README.md  confluence-pages.yaml  confluence.yaml  confluence.yaml.example  jira.yaml  jira.yaml.example  manifest.yaml  release-gates.yaml
.raise-archive/: README.md
.raise-kit/: README.md
.raise-v1-archive/: README.md
.raise-v1-archive/specs-v2.2/: README.md  architecture.md  vision.md
.raise/adapters/: confluence.yaml.example
.raise/agents/: agent-spec-gpt-5.1-codex.yaml
.raise/artifacts/: s1040.1-design.yaml  s1051.5-design.yaml  s11.3-design.yaml  s1132.0a-design.yaml  s1133.1-design.yaml  s1134.3-design.yaml  s348.1-design.yaml  s348.2-design.yaml  s350.1-design.yaml  s356.1-design.yaml  s356.2-design.yaml  s369.1-design.yaml  s369.2-design.yaml  s369.3-design.yaml  s369.4-design.yaml  s370.1-design.yaml  s370.2-design.yaml  s370.3-design.yaml  s370.5b-design.yaml  s370.5f-design.yaml  s474.2-design.yaml  s474.3-design.yaml  s474.4-design.yaml  s474.5-design.yaml  s476.1-design.yaml  s478.1-design.yaml  s478.2-design.yaml  s478.3-design.yaml  s479.1-design.yaml  s479.2-design.yaml  s493.2-design.yaml  s493.4-design.yaml  s516-design.yaml  s680.2-design.yaml  s680.3-design.yaml  s680.5-design.yaml
.raise/context/: DEPRECATED.md  glossary.md
.raise/gates/: gate-architecture.md  gate-code.md  gate-design.md  gate-discovery.md  gate-estimation.md  gate-plan.md  gate-vision.md
.raise/governance/: code-standards-draft.md  code-standards.md
.raise/graph/: unified.json
.raise/katas/: README.md
.raise/manifests/: skills.json
.raise/mcp/: catalog.yaml
.raise/rai/: prefixes.yaml  session-state.yaml
.raise/scripts/: log-error-event.sh  log-session-event.sh  log-skill-complete.sh  log-skill-start.sh
.raise/skills/: check-compliance.yaml  explain-rule.yaml  retrieve-mvc.yaml  run-gate.yaml
.raise/telemetry/: .gitignore  README.md
.raise/templates/: README.md  kata.md  skill.md
.raise/viz/: build_graph_html.py  graph.html
.specify/: config.json
.specify-raise/commands/: COMMAND_STRUCTURE_PROPOSAL.md  WORKFLOW_MAP.md  speckit.raise.discovery.md
.specify-raise/memory/: constitution.md
.specify/memory/: constitution.md
archive/: README.md
aspects/: introspection.md
dev/: README.md  Raise AI agent Workshop_ 2026_02_16 08_53 CST - Notas de Gemini.md  architecture-overview.md  components.md  context.md  epic-e1-scope.md  epic-e10-scope.md  epic-e11-scope.md  epic-e12-scope.md  epic-e13-scope.md  epic-e14-scope.md  epic-e16-scope.md  epic-e2-scope.md  epic-e3-scope.md  epic-e7-scope-v2.md  epic-e7-scope.md  epic-e8-scope.md  epic-e9-scope.md  framework-index.yaml  happy-path-guide-es.md  happy-path-guide.md  onboarding-fer-v2-overview.md  parking-lot.md  rai-architecture-discovery.md  session-state.md  setup.md
docs/: DoD_ Épicas, Historias y Múltiples Niveles.md  README.md  Reingeniería Educativa Ingeniería Software IA.md  astro.config.mjs  getting-started.md  getting-started.mdx  index.md  index.mdx  installation.md  package-lock.json  package.json  raise-corpus-unified.md
docs-github/: getting-started.md
es/: docs
framework/: README.md  index.yaml  vision.md
governance/: README.md  backlog.md  curygage-session-plan.md  design.md  guardrails-stack.md  guardrails.md  index.yaml  jira-confluence-standards.md  kaizen-desktop-2026-03-25.md  kurigage-gamma-slides.md  prd.md  project-vision-archived.md  roadmap.md  tiers.md  vision.md
scripts/: build-github-docs.sh  check-skills-sync.sh  sync-github.sh  sync-skills.py  sync-skills.sh
site/: .gitignore  DEPLOYMENT.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
specs/: DEPRECATED.md
tests/: __init__.py  conftest.py  test_cli_options.py  test_compat.py  test_exceptions.py  test_version.py
work/: README.md  presentacion-uam-2026-03-12.md
(+5334 files in other folders)
