[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
rai-core = { workspace = true }

[project]
name = "rai-cli"
version = "2.1.0"
description = "RaiSE CLI - Reliable AI Software Engineering governance framework"
authors = [
    {name = "Emilio Osorio", email = "emilio@humansys.ai"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
keywords = ["ai", "governance", "cli", "software-engineering", "methodology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "rai-core==2.1.0",
    "atlassian-python-api>=3.41.0",
    "authlib>=1.3.0",
    "cryptography>=42.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "tomli>=2.0.1; python_version < '3.11'",
    "networkx>=3.6.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-svelte>=1.0.2",
    "tree-sitter-language-pack>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
    "bandit>=1.7.8",
]
csharp = [
    "tree-sitter-c-sharp>=0.23.1",
]


[project.scripts]
rai = "rai_cli.cli.main:app"

[project.entry-points."rai.governance.parsers"]
prd = "rai_cli.governance.parsers.prd:PrdParser"
vision = "rai_cli.governance.parsers.vision:VisionParser"
constitution = "rai_cli.governance.parsers.constitution:ConstitutionParser"
roadmap = "rai_cli.governance.parsers.roadmap:RoadmapParser"
backlog = "rai_cli.governance.parsers.backlog:BacklogParser"
epic_scope = "rai_cli.governance.parsers.epic:EpicScopeParser"
adr = "rai_cli.governance.parsers.adr:AdrParser"
guardrails = "rai_cli.governance.parsers.guardrails:GuardrailsParser"
glossary = "rai_cli.governance.parsers.glossary:GlossaryParser"

[project.entry-points."rai.hooks"]
telemetry = "rai_cli.hooks.builtin.telemetry:TelemetryHook"
gate-bridge = "rai_cli.hooks.builtin.gate_bridge:GateBridgeHook"

[project.entry-points."rai.gates"]
tests = "rai_cli.gates.builtin.tests:TestGate"
types = "rai_cli.gates.builtin.types:TypeGate"
lint = "rai_cli.gates.builtin.lint:LintGate"
coverage = "rai_cli.gates.builtin.coverage:CoverageGate"

[project.entry-points."rai.graph.backends"]
local = "rai_cli.graph.filesystem_backend:FilesystemGraphBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rai_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/rai_cli/",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "packages/rai-core/src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "packages/rai-core/src"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
]
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/rai_cli",
    "--cov=packages/rai-core/src/rai_core",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: Manual integration tests requiring external services (run with -m integration)",
]

[tool.coverage.run]
source = ["src/rai_cli", "packages/rai-core/src/rai_core"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.rai]
# RaiSE CLI configuration for this project
output_format = "human"
color = true
verbosity = 0

