[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
raise-core = { workspace = true }
raise-server = { workspace = true }

[project]
name = "raise-cli"
version = "2.2.1"
description = "RaiSE CLI - Reliable AI Software Engineering governance framework"
authors = [
    {name = "Emilio Osorio", email = "emilio@humansys.ai"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
keywords = ["ai", "governance", "cli", "software-engineering", "methodology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "raise-core==2.2.1",
    "atlassian-python-api>=3.41.0",
    "authlib>=1.3.0",
    "cryptography>=46.0.5",
    "requests>=2.32.4",
    "urllib3>=2.6.3",
    "certifi>=2024.7.4",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "networkx>=3.6.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-svelte>=1.0.2",
    "tree-sitter-language-pack>=0.13.0",
    "logfire-api>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
    "bandit>=1.7.8",
    "raise-server",
    "httpx>=0.27.0",
]
mcp = [
    "mcp>=1.26,<2",
]
observability = [
    "logfire>=4.0",
]
csharp = [
    "tree-sitter-c-sharp>=0.23.1",
]

[project.urls]
Homepage = "https://raiseframework.ai"
Documentation = "https://docs.raiseframework.ai"
Repository = "https://github.com/humansys/raise"
Changelog = "https://github.com/humansys/raise/blob/main/CHANGELOG.md"

[project.scripts]
rai = "raise_cli.cli.main:app"

[project.entry-points."rai.governance.parsers"]
prd = "raise_cli.governance.parsers.prd:PrdParser"
vision = "raise_cli.governance.parsers.vision:VisionParser"
constitution = "raise_cli.governance.parsers.constitution:ConstitutionParser"
roadmap = "raise_cli.governance.parsers.roadmap:RoadmapParser"
backlog = "raise_cli.governance.parsers.backlog:BacklogParser"
epic_scope = "raise_cli.governance.parsers.epic:EpicScopeParser"
adr = "raise_cli.governance.parsers.adr:AdrParser"
guardrails = "raise_cli.governance.parsers.guardrails:GuardrailsParser"
glossary = "raise_cli.governance.parsers.glossary:GlossaryParser"

[project.entry-points."rai.hooks"]
telemetry = "raise_cli.hooks.builtin.telemetry:TelemetryHook"
gate-bridge = "raise_cli.hooks.builtin.gate_bridge:GateBridgeHook"
jira-sync = "raise_cli.hooks.builtin.jira_sync:JiraSyncHook"
backlog = "raise_cli.hooks.builtin.backlog:BacklogHook"
memory-sync = "raise_cli.hooks.builtin.memory:MemoryMdSyncHook"

[project.entry-points."rai.gates"]
tests = "raise_cli.gates.builtin.tests:TestGate"
types = "raise_cli.gates.builtin.types:TypeGate"
lint = "raise_cli.gates.builtin.lint:LintGate"
coverage = "raise_cli.gates.builtin.coverage:CoverageGate"

[project.entry-points."rai.doctor.checks"]
environment = "raise_cli.doctor.checks.environment:EnvironmentCheck"
project = "raise_cli.doctor.checks.project:ProjectCheck"

[project.entry-points."rai.adapters.pm"]
filesystem = "raise_cli.adapters.filesystem:FilesystemPMAdapter"
jira = "raise_cli.adapters.mcp_jira:McpJiraAdapter"

[project.entry-points."rai.docs.targets"]
confluence = "raise_cli.adapters.mcp_confluence:McpConfluenceAdapter"

[project.entry-points."rai.graph.backends"]
local = "raise_core.graph.backends.filesystem:FilesystemGraphBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raise_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/raise_cli/",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "packages/raise-core/src"]
exclude = ["dev/experiments"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "packages/raise-core/src", "packages/raise-server/src"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/raise_cli",
    "--cov=packages/raise-core/src/raise_core",
    "--cov=packages/raise-server/src/raise_server",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: Manual integration tests requiring external services (run with -m integration)",
]

[tool.coverage.run]
source = ["src/raise_cli", "packages/raise-core/src/raise_core", "packages/raise-server/src/raise_server"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.rai]
# RaiSE CLI configuration for this project
output_format = "human"
color = true
verbosity = 0

[tool.logfire]
ignore_no_config = true

